--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Update mới</h1>
     <h2>Update nội dung mới</h2>
+    <section class="carousel">
+        
+    </section>
 </body>
 </html>
