--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Update mới</h1>
     <h2>Update nội dung mới</h2>
     <section class="carousel">
-        
+        huhu
     </section>
 </body>
 </html>
